--- a/computer_vision/cubespheres/.gitattributes
+++ b/computer_vision/cubespheres/.gitattributes
@@ -1,2 +1,2 @@
-glm/* linguist-vendored=false
-opengl-wrappers/* linguist-vendored=false
+glm/* linguist-vendored
+opengl-wrappers/* linguist-vendored
